--- a/main.tex
+++ b/main.tex
@@ -1,52 +1,103 @@
-\documentclass[a4paper]{article}
-\usepackage[left=1in, right=1in, top=1in, bottom=1in]{geometry}
+% !TEX TS-program = xelatex
+\documentclass[12pt,a4paper]{article}
+\usepackage[margin=1in]{geometry}
 \usepackage{fontspec}
-\usepackage{graphicx}
-\usepackage{xstring}
+\usepackage{polyglossia}
+\setdefaultlanguage{thai}
+\setotherlanguage{english}
 
+% Font setup for Thai
+\newfontfamily\thaifont{TH Sarabun New}[
+  Script=Thai,
+  Scale=1.0
+]
+\newfontfamily\englishfont{TH Sarabun New}[
+  Script=Latin,
+  Scale=1.0
+]
 \setmainfont{TH Sarabun New}
-\date{}
-\author{}
-\title{
-    \includegraphics[width=1in, height=1in, keepaspectratio]{logo.png}
-    \\[2ex]
-    {\fontsize{32pt}{36pt}\selectfont\textbf{Polyfunctions robot}}
-}
 
-% Thai alphabet for page numbers (short version)
-\newcommand{\thailetters}{กขคงจฉชซฌญฎฏฐฑฒณดตถทธนบปผฝพฟภมยรลวศษสหฬอฮ}
-\newcommand{\thaipage}[1]{\StrChar{\thailetters}{#1}}
+% Single spacing
+\usepackage{setspace}
+\setstretch{1.0}
+
+% 16pt body size
+\makeatletter
+\renewcommand\normalsize{%
+  \@setfontsize\normalsize{16pt}{20pt}%
+}
+\normalsize
+\makeatother
+
+% Essential packages
+\usepackage[hidelinks]{hyperref}
+\usepackage{graphicx}
+\usepackage{booktabs}
+\usepackage{csquotes}
+
+% Bibliography setup for APA
+\usepackage[style=apa,backend=biber]{biblatex}
+\DeclareLanguageMapping{english}{english-apa}
+\addbibresource{references.bib}
 
 \begin{document}
-    \maketitle
-    \thispagestyle{empty}
 
-    \vfill
-    \begin{center}
-        {\fontsize{22pt}{26pt}\selectfont\textbf{
-            นายคมชาญ วิเศษนคร 
-            \\ 63040419-1
-        }}
-    \end{center}
-    \vfill
+% ----- Cover Page (no page number) -----
+\thispagestyle{empty}
+\begin{center}
+{\Large รายงานวิชาการ}\\[1em]
+{\huge หุ่นยนต์อเนกประสงค์ (Polyfunctions / Multi-Functional Robots)}\\[1.2em]
+{\Large นายคมชาญ วิเศษนคร}\\
+{\large 63040419-1}\\[1em]
+{\large รายงานฉบับนี้เป็นส่วนหนึ่งของรายวิชา EN813761 การสัมมนาทางวิศวกรรมคอมพิวเตอร์}\\
+{\large สาขาวิชาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยขอนแก่น}\\
+{\large ภาคเรียนที่ 1 ปีการศึกษา 2568}\\[2em]
+{\large \today}
+\end{center}
+\clearpage
 
-    \vfill
-    \begin{center}
-        {\fontsize{16pt}{20pt}\selectfont\textbf{
-            รายงานฉบับนี้เป็นส่วนหนึ่งของรายวิชา EN813761 การสัมมนาทางวิศวกรรมคอมพิวเตอร์
-            \\ สาขาวิชาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยขอนแก่น
-            \\ ภาคเรียนที่ 1 ปีการศึกษา 2568 
-        }}
-    \end{center}
+% ----- Start numbering from here -----
+\pagenumbering{arabic}
 
-    \newpage
-    \setcounter{page}{1}
-    \renewcommand{\thepage}{\thaipage{\value{page}}}
-    \pagestyle{plain}
-    \noindent
-    {\centering
-        {\fontsize{18pt}{22pt}\selectfont\textbf{คำนำ}\par}
-    }
-    
+% ----- Abstracts -----
+\section*{บทคัดย่อ}
+รายงานฉบับนี้เป็นการศึกษาเชิงลึกเกี่ยวกับหุ่นยนต์อเนกประสงค์ (Multi-functional Robots) โดยเน้นด้านวิศวกรรมและเทคโนโลยี การศึกษาครอบคลุมสถาปัตยกรรมทางวิศวกรรม ระบบควบคุม เทคโนโลยีฮาร์ดแวร์ และการประยุกต์ใช้ในอุตสาหกรรม ผลการศึกษาแสดงให้เห็นถึงความก้าวหน้าอย่างมีนัยสำคัญในด้านการออกแบบแบบโมดูลาร์ (Modular Design) ระบบควบคุมแบบลำดับชั้น (Hierarchical Control) และการรวมเซ็นเซอร์หลายรูปแบบ (Multimodal Sensing) รายงานนี้สรุปแนวโน้มการพัฒนาในอนาคตและข้อท้าทายทางเทคนิคที่วิศวกรต้องพิจารณา
+
+\section*{Abstract (English)}
+This report presents an in-depth engineering study of multi-functional robots, focusing on technical and technological aspects. The study covers engineering architectures, control systems, hardware technologies, and industrial applications. Results demonstrate significant advancements in modular design, hierarchical control systems, and multimodal sensing integration. The report concludes with future development trends and technical challenges that engineers must consider in this rapidly evolving field.
+
+\tableofcontents
+\clearpage
+
+% ----- Main Content -----
+\section{บทนำ}
+% Content will be added in next steps
+
+\section{สถาปัตยกรรมทางวิศวกรรม}
+% Content will be added in next steps
+
+\section{วิวัฒนาการเทคโนโลยี}
+% Content will be added in next steps
+
+\section{เทคโนโลยีหลักทางวิศวกรรม}
+% Content will be added in next steps
+
+\section{การประยุกต์ใช้ทางวิศวกรรม}
+% Content will be added in next steps
+
+\section{ความท้าทายทางเทคนิค}
+% Content will be added in next steps
+
+\section{ความปลอดภัยและมาตรฐาน}
+% Content will be added in next steps
+
+\section{ทิศทางการพัฒนาทางวิศวกรรม}
+% Content will be added in next steps
+
+\section{สรุป}
+% Content will be added in next steps
+
+% ----- Bibliography -----
+\printbibliography[title=เอกสารอ้างอิง]
 
 \end{document}
