--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@
 \title{
     \includegraphics[width=1in, height=1in, keepaspectratio]{logo.png}
     \\[2ex]
-    {\fontsize{32pt}{36pt}\selectfont\textbf{Polyfunctions robot}}
+    {\fontsize{32pt}{36pt}\selectfont\textbf{Polyfunctional Robots}}
 }
 
 \begin{document}
