--- a/main.tex
+++ b/main.tex
@@ -95,23 +95,27 @@
     {\fontsize{18pt}{22pt}\selectfont\textbf{บทคัดย่อ}\par}
 }
 
-รายงานฉบับนี้เป็นการศึกษาเชิงลึกเกี่ยวกับหุ่นยนต์อเนกประสงค์ (Multi-functional Robots) โดยเน้นด้านวิศวกรรมและเทคโนโลยี การศึกษาครอบคลุมสถาปัตยกรรมทางวิศวกรรม ระบบควบคุม เทคโนโลยีฮาร์ดแวร์ และการประยุกต์ใช้ในอุตสาหกรรม ผลการศึกษาแสดงให้เห็นถึงความก้าวหน้าอย่างมีนัยสำคัญในด้านการออกแบบแบบโมดูลาร์ (Modular Design) ระบบควบคุมแบบลำดับชั้น (Hierarchical Control) และการรวมเซ็นเซอร์หลายรูปแบบ (Multimodal Sensing) รายงานนี้สรุปแนวโน้มการพัฒนาในอนาคตและข้อท้าทายทางเทคนิคที่วิศวกรต้องพิจารณา
+รายงานฉบับนี้นำเสนอการวิเคราะห์เชิงครอบคลุมเกี่ยวกับหุ่นยนต์อเนกประสงค์ (Multi-functional Robots) ซึ่งเป็นเทคโนโลยีที่มีศักยภาพในการปฏิวัติการทำงานในหลากหลายภาคส่วน การศึกษานี้ได้วิเคราะห์สถาปัตยกรรมทางวิศวกรรมที่สำคัญ ประกอบด้วยการออกแบบแบบโมดูลาร์ ระบบควบคุมแบบลำดับชั้น และการรวมเซ็นเซอร์หลายรูปแบบ นอกจากนี้ยังได้สำรวจการประยุกต์ใช้ในอุตสาหกรรมการผลิต การแพทย์ การบริการ และภาคการเกษตร ผลการวิเคราะห์แสดงให้เห็นว่าหุ่นยนต์อเนกประสงค์สามารถเพิ่มประสิทธิภาพการทำงานและลดต้นทุนการดำเนินงานได้อย่างมีนัยสำคัญ อย่างไรก็ตาม ยังคงมีข้อท้าทายสำคัญในด้านความปลอดภัย มาตรฐานการทำงาน และการยอมรับจากสังคม รายงานนี้สรุปด้วยการเสนอแนวทางการพัฒนาในอนาคตและข้อแนะนำเชิงนโยบายเพื่อส่งเสริมการนำเทคโนโลยีนี้มาใช้ประโยชน์อย่างเหมาะสมและยั่งยืน
 
 \vspace{1em}
 
 \noindent
 {\centering
-    {\fontsize{18pt}{22pt}\selectfont\textbf{Abstract (English)}\par}
+    {\fontsize{18pt}{22pt}\selectfont\textbf{Abstract}\par}
 }
 
-This report presents an in-depth engineering study of multi-functional robots, focusing on technical and technological aspects. The study covers engineering architectures, control systems, hardware technologies, and industrial applications. Results demonstrate significant advancements in modular design, hierarchical control systems, and multimodal sensing integration. The report concludes with future development trends and technical challenges that engineers must consider in this rapidly evolving field.
+This report presents a comprehensive analysis of multi-functional robots, a transformative technology with significant potential across multiple sectors. The study examines critical engineering architectures including modular design systems, hierarchical control frameworks, and multimodal sensor integration. The analysis encompasses applications in manufacturing, healthcare, service industries, and agriculture. Findings demonstrate that multi-functional robots can significantly enhance operational efficiency and reduce operational costs across various applications. However, substantial challenges remain in safety protocols, standardization frameworks, and social acceptance. The report concludes with future development pathways and policy recommendations to facilitate appropriate and sustainable implementation of this technology. This comprehensive study provides stakeholders with essential insights for strategic decision-making regarding the adoption and development of multi-functional robotic systems.
+
+\vspace{1em}
+
+\noindent
+\textbf{Keywords:} Multi-functional robots, modular robotics, hierarchical control, industrial automation, human-robot collaboration
 
 \newpage
 
 % ----- Table of Contents -----
 \tableofcontents
 \newpage
-
 % ----- Switch to Arabic numbering for main content -----
 \pagenumbering{arabic}
 \setcounter{page}{1}
