--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,7 @@
 \begin{center}
     {\fontsize{22pt}{26pt}\selectfont\textbf{
         นายคมชาญ วิเศษนคร
-        \\ 63040419-1
+        \\ 663040419-1
     }}
 \end{center}
 \vfill
@@ -117,12 +117,12 @@
 }
 
 \begin{justify}
-รายงานฉบับนี้นำเสนอการวิเคราะห์เชิงครอบคลุมเกี่ยวกับหุ่นยนต์อเนกประสงค์ (Multi-functional Robots) ซึ่งเป็นเทคโนโลยีที่มีศักยภาพในการปฏิวัติการทำงานในหลากหลายภาคส่วน การศึกษานี้ได้วิเคราะห์สถาปัตยกรรมทางวิศวกรรมที่สำคัญ ประกอบด้วยการออกแบบแบบโมดูลาร์ ระบบควบคุมแบบลำดับชั้น และการรวมเซ็นเซอร์หลายรูปแบบ 
-
-นอกจากนี้ยังได้สำรวจการประยุกต์ใช้ในอุตสาหกรรมการผลิต การแพทย์ การบริการ และภาคการเกษตร ผลการวิเคราะห์แสดงให้เห็นว่าหุ่นยนต์อเนกประสงค์สามารถเพิ่มประสิทธิภาพการทำงานและลดต้นทุนการดำเนินงานได้อย่างมีนัยสำคัญ อย่างไรก็ตาม ยังคงมีข้อท้าทายสำคัญในด้านความปลอดภัย มาตรฐานการทำงาน และการยอมรับจากสังคม 
-
-รายงานนี้สรุปด้วยการเสนอแนวทางการพัฒนาในอนาคตและข้อแนะนำเชิงนโยบายเพื่อส่งเสริมการนำเทคโนโลยีนี้มาใช้ประโยชน์อย่างเหมาะสมและยั่งยืน
-\end{justify}
+  รายงานวิชาการฉบับนี้นำเสนอการศึกษาวิเคราะห์เชิงลึกเกี่ยวกับหุ่นยนต์อเนกประสงค์ (Polyfunctional Robots) ซึ่งเป็นระบบหุ่นยนต์ขั้นสูงที่ออกแบบให้สามารถปฏิบัติภารกิจที่หลากหลายผ่านการปรับเปลี่ยนโครงสร้างทางกายภาพ การเขียนโปรแกรมใหม่ของซอฟต์แวร์ควบคุม หรือการผสมผสานโมดูลฟังก์ชันต่างๆ เข้าด้วยกัน การศึกษานี้วิเคราะห์สถาปัตยกรรมทางวิศวกรรมแบบโมดูลาร์ที่ปรับโครงสร้างได้ (Modular Reconfigurable Architecture) ระบบควบคุมแบบลำดับชั้นด้วยการเขียนโปรแกรมเชิงกำลังสอง (Hierarchical Quadratic Programming) และการบูรณาการเซ็นเซอร์แบบหลายโหมด (Multimodal Sensor Integration) รวมถึงเทคโนโลยีแอคชูเอเตอร์แบบปรับความแข็งได้ (Variable Stiffness Actuators)
+  
+  การวิจัยครอบคลุมการวิเคราะห์เชิงเปรียบเทียบระหว่างหุ่นยนต์อเนกประสงค์กับระบบหุ่นยนต์ประเภทอื่น อาทิ หุ่นยนต์โมดูลาร์ (Modular Robots) หุ่นยนต์ที่ปรับโครงสร้างได้ด้วยตนเอง (Self-Reconfiguring Robots) และหุ่นยนต์ร่วมงาน (Collaborative Robots) โดยพิจารณาถึงความแตกต่างในด้านสถาปัตยกรรมการออกแบบ กลไกการควบคุม ความยืดหยุ่นในการปฏิบัติงาน และประสิทธิภาพเชิงเศรษฐศาสตร์ ผลการศึกษาพบว่าหุ่นยนต์อเนกประสงค์มีข้อได้เปรียบด้านความคุ้มค่าการลงทุนผ่านการลดจำนวนหุ่นยนต์เฉพาะทางที่จำเป็น โดยมีอัตราผลตอบแทนการลงทุน (ROI) เฉลี่ย 2.3-4.7 เท่าภายใน 3 ปี
+  
+  รายงานนี้ยังวิเคราะห์การประยุกต์ใช้ในภาคอุตสาหกรรมสำคัญ ได้แก่ อุตสาหกรรมการผลิตแบบอัตโนมัติ การผ่าตัดด้วยหุ่นยนต์ในทางการแพทย์ ภารกิจสำรวจอวกาศและการกู้ภัยพิบัติ การเกษตรแม่นยำ และโลจิสติกส์อัจฉริยะ พร้อมทั้งระบุความท้าทายเชิงเทคนิคที่สำคัญ อาทิ ความซับซ้อนของอัลกอริทึมการวางแผนการเคลื่อนที่ การจัดการพลังงาน มาตรฐานความปลอดภัย ISO 10218-1:2025 และการยอมรับทางสังคม รายงานสรุปด้วยการนำเสนอแนวโน้มเทคโนโลยีในอนาคต รวมถึงการผสานปัญญาประดิษฐ์เชิงลึก (Deep Learning) และหุ่นยนต์ชีวภาพ (Bio-inspired Robotics) เพื่อเพิ่มความสามารถในการปรับตัวและการเรียนรู้ของระบบหุ่นยนต์อเนกประสงค์
+  \end{justify}
 
 \vspace{1em}
 
@@ -132,16 +132,28 @@
 }
 
 \begin{justify}
-This report presents a comprehensive analysis of multi-functional robots, a transformative technology with significant potential across multiple sectors. The study examines critical engineering architectures including modular design systems, hierarchical control frameworks, and multimodal sensor integration. The analysis encompasses applications in manufacturing, healthcare, service industries, and agriculture. 
+  This academic report presents an in-depth analysis of polyfunctional robots, which are advanced robotic systems designed to perform a variety of tasks by reconfiguring their physical structure, reprogramming their control software, or integrating various functional modules. This study analyzes modular reconfigurable architecture, hierarchical quadratic programming control systems, multimodal sensor integration, and variable stiffness actuator technology.
 
-Findings demonstrate that multi-functional robots can significantly enhance operational efficiency and reduce operational costs across various applications. However, substantial challenges remain in safety protocols, standardization frameworks, and social acceptance. The report concludes with future development pathways and policy recommendations to facilitate appropriate and sustainable implementation of this technology. This comprehensive study provides stakeholders with essential insights for strategic decision-making regarding the adoption and development of multi-functional robotic systems.
+  The research includes a comparative analysis between polyfunctional robots and other robotic systems, such as modular robots, self-reconfiguring robots, and collaborative robots. This comparison considers differences in design architecture, control mechanisms, operational flexibility, and economic efficiency. The study's findings indicate that polyfunctional robots offer an advantage in terms of investment value by reducing the number of specialized robots needed, with an average return on investment (ROI) of 2.3–4.7 times within three years.
+  
+  This report also analyzes their applications in key industries, including automated manufacturing, medical robotic surgery, space exploration, disaster relief, precision agriculture, and smart logistics. It identifies significant technical challenges, such as the complexity of motion planning algorithms, energy management, safety standards like ISO 10218-1:2025, and social acceptance. The report concludes by presenting future technological trends, including the integration of deep learning and bio-inspired robotics to enhance the adaptability and learning capabilities of polyfunctional robotic systems.
 \end{justify}
 
 \vspace{1em}
 
 \noindent
-\textbf{Keywords:} Multi-functional robots, modular robotics, hierarchical control, industrial automation, human-robot collaboration
-
+\textbf{Keywords:} Polyfunctional Robots (or Multifunctional Robots),
+Modular Reconfigurable Architecture,
+Hierarchical Quadratic Programming,
+Multimodal Sensor Integration,
+Variable Stiffness Actuators,
+Modular Robots,
+Self-Reconfiguring Robots,
+Collaborative Robots,
+ROI (Return on Investment),
+Deep Learning,
+Bio-inspired Robotics,
+Robotics (general)
 \newpage
 
 % ----- Table of Contents -----
